--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
   <meta name="theme-color" content="#1976d2">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>
+    <h1 style="margin: 0 auto;padding-top: 25%;">Loading Project UPMS...</h1>
+  </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
