--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="mat-typography">
   <app-root>
-    <h1 style="margin: 0 auto;padding-top: 25%;">Loading Project UPMS...</h1>
+    <h1 class="blink" style="margin: 0 auto;padding-top: 25%;">Loading Project UPMS...</h1>
   </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
